--- a/markdown/双指针.md
+++ b/markdown/双指针.md
@@ -161,3 +161,111 @@ public:
 - **时间复杂度**：O(sz)，其中 sz 是链表的长度。只需遍历链表一次。
 - **空间复杂度**：O(1)，只使用了常数个额外指针（`dummy`、`fast`、`slow`），未使用额外的存储空间。
   
+
+---
+---
+# 15. 三数之和
+## 题目描述
+给你一个整数数组 `nums` ，判断是否存在三元组 `[nums[i], nums[j], nums[k]]` 满足 `i != j`、`i != k` 且 `j != k` ，同时还满足 `nums[i] + nums[j] + nums[k] == 0` 。请你返回所有和为 0 且不重复的三元组。
+
+**注意**：答案中不可以包含重复的三元组。
+
+
+## 示例
+### 示例 1
+- 输入：`nums = [-1,0,1,2,-1,-4]`
+- 输出：`[[-1,-1,2],[-1,0,1]]`
+- 解释：
+  - `nums[0] + nums[1] + nums[2] = (-1) + 0 + 1 = 0`
+  - `nums[1] + nums[2] + nums[4] = 0 + 1 + (-1) = 0`
+  - `nums[0] + nums[3] + nums[4] = (-1) + 2 + (-1) = 0`
+  - 不同的三元组是 `[-1,0,1]` 和 `[-1,-1,2]`，输出顺序和三元组内元素顺序均不重要。
+
+### 示例 2
+- 输入：`nums = [0,1,1]`
+- 输出：`[]`
+- 解释：唯一可能的三元组和不为 0 。
+
+### 示例 3
+- 输入：`nums = [0,0,0]`
+- 输出：`[[0,0,0]]`
+- 解释：唯一可能的三元组和为 0 。
+
+
+## 提示
+- `3 <= nums.length <= 3000`
+- `-10^5 <= nums[i] <= 10^5`
+
+
+## 代码
+
+```cpp
+#include <vector>
+#include <algorithm>
+using namespace std;
+
+class Solution {
+public:
+    vector<vector<int>> threeSum(vector<int>& nums) {
+        vector<vector<int>> result;
+        // 先对数组进行排序，为去重和双指针操作奠定基础
+        sort(nums.begin(), nums.end());
+        
+        // 遍历每个可能的第一个元素 nums[i]（三元组中的 a）
+        for (int i = 0; i < nums.size(); i++) {
+            // 排序后若第一个元素已大于 0，三数之和必大于 0，直接返回结果
+            if (nums[i] > 0) {
+                return result;
+            }
+            
+            // 对第一个元素去重：避免重复选取相同的 a 导致重复三元组
+            if (i > 0 && nums[i] == nums[i - 1]) {
+                continue;
+            }
+            
+            // 双指针初始化：left 指向 a 的下一位（b），right 指向数组末尾（c）
+            int left = i + 1;
+            int right = nums.size() - 1;
+            
+            // 双指针遍历寻找 b 和 c，使 a + b + c = 0
+            while (right > left) {
+                int sum = nums[i] + nums[left] + nums[right];
+                
+                if (sum > 0) {
+                    // 和过大，需减小 c 的值，右指针左移
+                    right--;
+                } else if (sum < 0) {
+                    // 和过小，需增大 b 的值，左指针右移
+                    left++;
+                } else {
+                    // 找到符合条件的三元组，加入结果集
+                    result.push_back(vector<int>{nums[i], nums[left], nums[right]});
+                    
+                    // 对 b 去重：避免重复选取相同的 b 导致重复三元组
+                    while (right > left && nums[right] == nums[right - 1]) {
+                        right--;
+                    }
+                    // 对 c 去重：避免重复选取相同的 c 导致重复三元组
+                    while (right > left && nums[left] == nums[left + 1]) {
+                        left++;
+                    }
+                    
+                    // 找到有效组合后，双指针同时收缩（避免重复检查已处理的元素）
+                    right--;
+                    left++;
+                }
+            }
+        }
+        
+        return result;
+    }
+};
+```
+
+![](https://file1.kamacoder.com/i/algo/15.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.gif)
+## 核心思路解析
+- 首先这道题目最重要的肯定就是先将这个**数组排序**，然后按照图示动画来进行模拟（这是最基本的，同时也是最简单的）
+- 🎯但是我们要注意题目要求，题目说的是三元组内部元素可以重复，但是三元组这个整体不能重复，一定要理解清楚题目的意思到底是什么。这样的话，我们在回头看我们的代码是不是就特别清楚了呢？首先就是对第一个元素的去重，如果在最开始出现的是两个-1（这里只是作为例子表示），i和i+1对应的数组元素不久会相同了吗？那如果按照我们一开始的逻辑，这样两种情况下找到的组合也就是一样的了，就不满足题意，但是我们会不小心把这种情况加入我们的答案中。所以我们会多这么一层判断。
+- 首先我们把第一个元素的去重方法说了，那第二个元素和第三个元素又该怎么处理呢？一个是左指针，一个是右指针，<mark>**互相向中间逼近**</mark>，按照第一种元素的去重方法，同样可以达到一样的效果。📌
+
+![alt text](image-1.png)
