--- a/基本数据结构/哈希表.md
+++ b/基本数据结构/哈希表.md
@@ -1,8 +1,10 @@
 # **<mark>哈希表**🎯
 
-📍优点：当我们遇到了要🕯️**快速判断一个元素是否出现集合里**的时候，就要考虑哈希法。
+📍<mark>**优点**</mark>：当我们遇到了要🕯️**快速判断一个元素是否出现集合里**的时候，就要考虑哈希法。
   
-📢缺点：但是哈希法也是牺牲了空间换取了时间，因为我们要使用额外的数组，set或者是map来存放数据，才能实现快速的查找。
+📢<mark>**缺点**</mark>：但是哈希法也是牺牲了空间换取了时间，因为我们要使用额外的数组，set或者是map来存放数据，才能实现快速的查找。
+
+🎈<mark>**哈希碰撞**</mark>的缘由：谈到哈希碰撞的缘由，就要说到哈希表的本质，哈希表的本质是通过观察输入的内容，分配给对应的哈希值，但是可能会出现巧合，导致两个输入分配到了同一个哈希值，这也就会出现我们所说的哈希碰撞，至于如何解决，就可以往下继续看了。
 
 
 # 哈希表基本介绍📀
@@ -113,14 +115,228 @@
 3. **动态扩容开销**：扩容时的键迁移会占用CPU资源，若对实时性要求极高，需提前规划合适的初始数组长度。
 4. **键的不可变性**：哈希表的键必须是“不可变类型”（如Java的`String`、`Integer`），因为键的哈希值在插入后不能变化，否则会无法找到对应的键值对。
 
+## 六、set,multiset,unordered_set
 
-## 六、经典实现举例：Python dict 与 Java HashMap
-| 特性                | Python dict                          | Java HashMap                        |
-|---------------------|--------------------------------------|-------------------------------------|
-| 冲突解决            | 链地址法（链表）                     | 链地址法（链表+红黑树，阈值8）      |
-| 初始数组长度        | 8                                    | 16                                  |
-| 负载因子阈值        | 0.666...（2/3）                      | 0.75                                |
-| 扩容策略            | 扩容至原长度的2倍                    | 扩容至原长度的2倍                   |
-| 顺序维护            | Python 3.7+维护插入顺序              | 不维护顺序（`LinkedHashMap`维护）   |
+| 集合               | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率  | 增删效率  |
+|--------------------|----------|----------|------------------|--------------|-----------|-----------|
+| std::set           | 红黑树   | 有序     | 否               | 否           | O(log n)  | O(log n)  |
+| std::multiset      | 红黑树   | 有序     | 是               | 否           | O(log n)  | O(log n)  |
+| std::unordered_set | 哈希表   | 无序     | 否               | 否           | O(1)      | O(1)      |
+
+---
+---
+
+| 映射               | 底层实现 | 是否有序   | 数值是否可以重复 | 能否更改数值   | 查询效率  | 增删效率  |
+|--------------------|----------|------------|------------------|----------------|-----------|-----------|
+| std::map           | 红黑树   | key 有序   | key 不可重复     | key 不可修改   | O(log n)  | O(log n)  |
+| std::multimap      | 红黑树   | key 有序   | key 可重复       | key 不可修改   | O(log n)  | O(log n)  |
+| std::unordered_map | 哈希表   | key 无序   | key 不可重复     | key 不可修改   | O(1)      | O(1)      |
 
 ![alt text](image.png)
+
+## 扩展 📌
+在我们浅浅的学完哈希表后，我们可能会出现这么一个疑问，遇到哈希问题直接使用set不就可以了吗？但是从底层逻辑上来说，直接使用set不仅**占用空间要比数组大**，而且**速度也比数组慢**，set把数值映射到key上都要做hash计算的。不要小瞧这个耗时，在数据量大的情况，差距是很明显的
+
+## 哈希表的相关语法
+在 C++ 中，哈希表主要通过标准库中的 `unordered_set`（哈希集合）和 `unordered_map`（哈希映射）实现，它们都基于哈希表数据结构，提供 O(1) 平均时间复杂度的插入、删除和查找操作。以下是它们的基本语法和使用示例：
+
+
+### 1. 头文件与命名空间
+使用哈希表需包含头文件 `<unordered_set>`（针对集合）或 `<unordered_map>`（针对映射），且它们位于 `std` 命名空间中：
+```cpp
+#include <unordered_set>  // 用于 unordered_set
+#include <unordered_map>  // 用于 unordered_map
+using namespace std;      // 简化代码，可省略（省略时需加 std:: 前缀）
+```
+
+
+### 2. unordered_set（哈希集合）
+存储唯一的元素（值不可重复），元素无序，底层为哈希表。
+
+#### 基本操作：
+```cpp
+// 1. 定义和初始化
+unordered_set<int> mySet;  // 空集合（存储 int 类型）
+unordered_set<string> strSet = {"apple", "banana", "cherry"};  // 初始化时赋值
+
+// 2. 插入元素
+mySet.insert(10);
+mySet.insert(20);
+mySet.insert(10);  // 插入重复元素，会被忽略（集合元素唯一）
+
+// 3. 查找元素（返回迭代器：找到则指向该元素，否则指向 end()）
+auto it = mySet.find(10);
+if (it != mySet.end()) {
+    cout << "找到元素：" << *it << endl;  // 输出：找到元素：10
+} else {
+    cout << "未找到元素" << endl;
+}
+
+// 4. 删除元素
+mySet.erase(20);  // 通过值删除
+// 也可通过迭代器删除：mySet.erase(it);
+
+// 5. 其他常用方法
+cout << "元素个数：" << mySet.size() << endl;  // 输出：1（当前元素为 10）
+cout << "是否为空：" << (mySet.empty() ? "是" : "否") << endl;  // 输出：否
+mySet.clear();  // 清空集合
+```
+
+#### 遍历：
+```cpp
+unordered_set<string> fruits = {"apple", "banana", "cherry"};
+// 范围 for 循环遍历
+for (const string& fruit : fruits) {
+    cout << fruit << " ";  // 输出顺序不确定（无序）
+}
+```
+
+
+### 3. unordered_map（哈希映射）
+存储键值对（`key-value`），键（`key`）不可重复，键无序，底层为哈希表。
+
+#### 基本操作：
+```cpp
+// 1. 定义和初始化
+unordered_map<string, int> myMap;  // 空映射（key 为 string，value 为 int）
+unordered_map<int, string> idMap = {
+    {1, "Alice"},
+    {2, "Bob"},
+    {3, "Charlie"}
+};  // 初始化时赋值
+
+// 2. 插入键值对
+myMap["age"] = 25;  // 直接赋值（常用）
+myMap.insert({"name", "Alice"});  // 通过 insert 方法插入
+myMap.insert(pair<string, int>("height", 165));  // 通过 pair 插入
+
+// 3. 查找元素（返回迭代器：找到则指向键值对，否则指向 end()）
+auto it = myMap.find("name");
+if (it != myMap.end()) {
+    cout << "key: " << it->first << ", value: " << it->second << endl;
+    // 输出：key: name, value: Alice
+}
+
+// 4. 修改值（通过 key 直接访问并修改）
+myMap["age"] = 26;  // 将 "age" 对应的值从 25 改为 26
+
+// 5. 删除元素
+myMap.erase("height");  // 通过 key 删除
+// 也可通过迭代器删除：myMap.erase(it);
+
+// 6. 其他常用方法
+cout << "键值对个数：" << myMap.size() << endl;  // 输出：2（当前键为 "age" 和 "name"）
+cout << "是否包含 key 'age'：" << (myMap.count("age") ? "是" : "否") << endl;  // 输出：是
+myMap.clear();  // 清空映射
+```
+
+#### 遍历：
+```cpp
+unordered_map<int, string> idMap = {{1, "Alice"}, {2, "Bob"}};
+// 范围 for 循环遍历键值对
+for (const auto& pair : idMap) {
+    cout << "id: " << pair.first << ", name: " << pair.second << endl;
+    // 输出顺序不确定（键无序）
+}
+```
+
+
+### 4. 自定义类型的哈希表使用
+如果需要在哈希表中存储自定义类型（如结构体），需手动定义哈希函数和相等性判断函数，否则编译器会报错。
+
+示例（存储自定义结构体 `Person`）：
+```cpp
+#include <string>
+#include <unordered_map>
+
+struct Person {
+    string name;
+    int age;
+};
+
+// 1. 定义哈希函数（需特化 std::hash）
+namespace std {
+    template<> struct hash<Person> {
+        size_t operator()(const Person& p) const {
+            // 组合 name 和 age 的哈希值（简单示例）
+            return hash<string>()(p.name) ^ hash<int>()(p.age);
+        }
+    };
+}
+
+// 2. 定义相等性判断（用于处理哈希碰撞时判断元素是否相同）
+bool operator==(const Person& a, const Person& b) {
+    return a.name == b.name && a.age == b.age;
+}
+
+// 使用自定义类型的 unordered_set
+int main() {
+    unordered_set<Person> people;
+    people.insert({"Alice", 25});
+    people.insert({"Bob", 30});
+    return 0;
+}
+```
+
+
+### 总结
+- `unordered_set` 和 `unordered_map` 是 C++ 中哈希表的典型实现，适合需要高效插入、删除和查找的场景。
+- 它们的元素（或键）是无序的，若需要有序集合/映射，应使用 `set` 或 `map`（底层为红黑树）。
+- 对于自定义类型，需额外定义哈希函数和相等性判断逻辑才能使用哈希表。
+
+
+
+### unordered_set、unordered_map和set、map的选择
+📌如果从一个初学者的角度来考虑这个问题的话，如果要找最大值和最小值的时候，无条件选择set和map，因为这两个毕竟是有序的。但是如果是只是查询的话，更建议使用无序的，因为这样查询会更加快。
+
+
+### tip:关于unordered_set中函数的使用
+如果我们想在这个无序set中找到是否有这个元素，要是写成num_set.find(xxx)就是一个典型的错误。因为这个函数的底层逻辑是，如果找到了这个元素，则返回这个元素对应的迭代器；相反，如果没有找到，则返回num_set.end()。所以我们一般写if语句的时候，都会写，if(num_set.find(xxx) != num_set.end()),如果这个if语句成立的话，则证明找到了，如果不成立，则没有这个元素。
+
+### num_set.begin()和num_set.end()
+- num_set.begin()：返回一个迭代器，指向容器中的第一个元素。
+- num_set.end()：返回一个迭代器，指向容器中最后一个元素的下一个位置（是一个 “哨兵” 位置，不指向任何实际元素）。
+
+
+### 什么时候使用map📢
+#### 首先我们想清楚：
+- 为什么想到用哈希表？
+- 哈希表为什么用map？而不是用set？
+- 本题的map是用来存什么的？
+- map中的key和value是用来存什么的？
+ ![alt text](image-1.png)
+
+### 什么时候使用map？什么时候使用数组呢？
+不知道各位是否会有一个疑问，到底什么时候使用数组，什么时候去使用map？内心总有一个感觉，能用数组的map一定可以解决，但是能用map的数组不一定可以解决。这其实是一个错误的认知。🎯
+
+#### 什么时候使用数组？
+- 数据范围已知且较小
+- 数据可以映射为连续的整数索引
+- 对性能要求高的场景
+  
+#### 什么时候使用哈希表？
+- 数据范围大且不确定（如可能出现任意的整数）
+- 数据分布稀疏，用数组会浪费大量的空间，导致空间浪费
+- 需要存储键值对，且键的类型复杂（如字符串作为键）
+
+![alt text](image-2.png)
+
+
+---
+---
+# 总结
+## 常见的哈希结构🗝️
+- 📍数组
+- 📍set
+- 📍map
+
+## map与数组
+一定要记住的就是，map不是万能的，虽然从功能上来看，map确实非常强大，但是却更消耗空间，因为map要维护红黑树或者是符号表，而且还要做哈希运算。
+
+### 数组，map，set的运用场景
+- 数组：数据大小受限，连续性比较强的时候
+- set：数组空间够大，但是哈希值比较少，特别分散，并且跨度比较大。
+- map：数组空间够大，哈希值比较分散，但同时map与set的区别就在于，map可以存两类值（可以这么简单记忆），除此之外，set不能保留重复的元素，这就显现出了set的一定的局限性，但是如果题目没有要求，我们还是优先选择set，这样更快。
+
+
+![alt text](image-3.png)
